--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
     "build:web": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
