--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "wouter": "^3.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.6.0",
