--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tanstack/react-query": "^5.81.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "wouter": "^3.7.1"
