--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@tanstack/react-query": "^5.81.2",
+    "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "wouter": "^3.7.1"
