--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
