--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.2",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
