--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && npm install && npm run build",
-    "build:web": "vite build",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
-  },
+  "dev": "ts-node src/server.ts",
+  "build": "tsc && cd client && npm install && npm run build",
+  "start": "node dist/server.js"
+},
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
