--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
   "dev": "ts-node src/server.ts",
   "build": "tsc && cd client && npm install && npm run build",
-  "start": "NODE_ENV=production node dist/server.js"
+  "start": "node dist/server.js"
 },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
